--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 
 script:
-  - head -n 4 Main.java | sed -E 's/(.*)\:(.*)/\2/g'
+  - head -n 4 src/main/java/Main.java | sed -E 's/(.*)\:(.*)/\2/g'
   - mvn compile
   - mvn exec:java -D exec.mainClass=Main
